src/fluxcd/infra/prometheus/hooks-post/prometheus-omada-exporter.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-omada-exporter
  namespace: prometheus
  labels:
    app.kubernetes.io/name: prometheus-omada-exporter
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-omada-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus-omada-exporter
    spec:
      containers:
        - name: prometheus-omada-exporter
          image: ghcr.io/charlie-haley/omada_exporter
          ports:
            - containerPort: 9202
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-omada-exporter
  namespace: prometheus
  labels:
    mylabel/app: prometheus-omada-exporter
spec:
  selector:
    app.kubernetes.io/name: prometheus-omada-exporter
  ports:
  - name: prometheus
    protocol: TCP
    port: 9202
    targetPort: http
