src/fluxcd/infra/prometheus/hooks-post/prometheus-pve-exporter.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-pve-exporter
  namespace: prometheus
  labels:
    app.kubernetes.io/name: prometheus-pve-exporter
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-pve-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus-pve-exporter
    spec:
      containers:
        - name: prometheus-pve-exporter
          image: docker.io/prompve/prometheus-pve-exporter
          ports:
            - containerPort: 9221
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-pve-exporter
  namespace: prometheus
  labels:
    mylabel/app: prometheus-pve-exporter
spec:
  selector:
    app.kubernetes.io/name: prometheus-pve-exporter
  ports:
  - name: prometheus
    protocol: TCP
    port: 9221
    targetPort: http
