src/fluxcd/infra/prometheus/hooks-post/ingresses.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-stack-prometheus
  namespace: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.ryanb.tv`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-prometheus
          kind: Service
          port: http-web
  tls: {}

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-stack-alertmanager
  namespace: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.ryanb.tv`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-alertmanager
          kind: Service
          port: http-web
  tls: {}

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.ryanb.tv`)
      kind: Rule
      services:
        - name: prometheus-grafana
          kind: Service
          port: http-web
  tls: {}
